--- a/vercel.json
+++ b/vercel.json
@@ -6,12 +6,16 @@
       "use": "@vercel/node"
     }
   ],
-   
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "server.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "http://localhost:3000",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-CSRF-Token",
+        "Access-Control-Allow-Credentials": "true"
+      }
     }
   ]
- 
 }
